# nokia-test-task

./: Anketa4Students_C++.docx  CMakeLists.txt  README.md
cells/: cell.hpp  evaluation_state.hpp
cells/binary_operation/: addition.cpp  division.hpp  multiplication.hpp
cells/unary_operation/: const.hpp
exceptions/evaluation/: division_by_zero_exception.hpp  evaluation_exception.hpp
src/: global_constants.hpp  main.cpp  test.cpp
src/cells/: cell.cpp  cell.hpp
src/cells/binary_operation/: addition.hpp  binary_operation.cpp  binary_operation.hpp  binary_operation_factory.hpp  binary_operators.hpp  division.cpp  division.hpp  multiplication.cpp  multiplication.hpp  subtraction.cpp  subtraction.hpp
src/cells/unary_operation/: const.cpp  const.hpp
src/exceptions/evaluation/: division_by_zero_exception.hpp  evaluation_exception.hpp  recursion_exception.hpp
src/exceptions/parsing/: invalid_format_exception.hpp  no_such_cell_exception.hpp  no_such_path_exception.hpp  non_unique_column_id_exception.hpp  non_unique_id_exception.hpp  non_unique_row_id_exception.hpp  not_csv_file_exception.hpp  parsing_exception.hpp
src/table/: global_constants.hpp  row.cpp  row.hpp  table.cpp  table.hpp
table/: row.hpp
tests/: all_test_paths.txt
tests/correct/: complex.csv
tests/correct/answers/: complex.csv  example.csv
tests/incorrect/evaluation/: division_by_zero.csv  recursive_cell.csv
tests/incorrect/parsing/: non_unique_column_id.csv
